# SAE-CityBuilder

./: .clang-format  .gitignore  CMakeLists.txt  main.cc  main.cpp  vcpkg.json
_assets/tiles/: RTS_medieval@2_no_margins_transparent - Copie.png~
api/: CMakeLists.txt
api/include/PerfChecker/: FPSCounter.h
api/include/SaveSystem/: JsonValue.h  SaveManager.h
api/include/ai/: normalize_npc.h  npc_manager.h
api/include/editMode/: edit_mod.h
api/include/graphics/: building_renderer.h  tilemap_renderer.h
api/include/motion/: a_star.h  motor.h
api/include/tileMap/: TileLayer.h  TileMap.h  TileMapEditor.h  TileSet.h
api/include/tiles/: tile.h  tilemap_generator.h
api/include/worldSettings/: world_settings.h
api/src/PerfChecker/: FPSCounter.cc
api/src/ai/: normalize_npc.cc  npc_manager.cc
api/src/editMode/: edit_mod.cc
api/src/graphics/: building_renderer.cc  camera.cc
api/src/motion/: a_star.cc  motor.cc
api/src/tileMap/: TileLayer.cc  TileMap.cc  TileMapEditor.cc  TileSet.cc
core/include/ai/: bt_action.h  bt_composite.h  bt_node_factory.h  bt_selector.h  bt_sequence.h
game/: CMakeLists.txt
game/include/: game.h  game_types.h  resource_manager.h  tilemap.h
game/src/: game.cc  resource_manager.cc  tilemap.cc
